# AWSIM-AF

./: README.md
Geographic/lib/: libGeographicLib.so.26.0.0
awsim_client/: CMakeLists.txt  CMakeLists.txt.user.f41791c  SendScenario.cpp  SendScenario.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mgrs_projector.cpp  point_cloud_merge.cpp  point_cloud_merge.h  point_cloud_widget.cpp  point_cloud_widget.h  scenario_datatype.h  t4v23.yaml  t4v232.yaml
lanelet2/lib/: liblanelet2_core.so.1  liblanelet2_io.so.1  liblanelet2_matching.so.1  liblanelet2_matching.so.1.2.1  liblanelet2_projection.so.1  liblanelet2_projection.so.1.2.1  liblanelet2_routing.so.1  liblanelet2_traffic_rules.so.1  liblanelet2_traffic_rules.so.1.2.1  liblanelet2_validation.so.1  liblanelet2_validation.so.1.2.1
lanelet2/lib/lanelet2_examples/: 01_dealing_with_lanelet_primitives  02_regulatory_elements  03_lanelet_map  04_reading_and_writing  05_traffic_rules  06_routing  07_matching  tutorial.py
lanelet2/lib/lanelet2_validation/: lanelet2_validate
shader/: shader_tex.fs  shader_tex.vs
